study databinding: Listening Binding

--- a/databinding/src/main/AndroidManifest.xml
+++ b/databinding/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
         <activity android:name=".MethodReferenceActivity">
         </activity>
+        <activity android:name=".ListeningBindingActivity">
+        </activity>
     </application>
 
 </manifest>
