study databinding: imports

--- a/databinding/src/main/AndroidManifest.xml
+++ b/databinding/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".ListeningBindingActivity">
         </activity>
+        <activity android:name=".ImportsActivity">
+        </activity>
     </application>
 
 </manifest>
