study databinding: include

--- a/databinding/src/main/AndroidManifest.xml
+++ b/databinding/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         </activity>
         <activity android:name=".ImportsActivity">
         </activity>
+        <activity android:name=".IncludeActivity">
+        </activity>
     </application>
 
 </manifest>
