study databinding： Observable objects

--- a/databinding/src/main/AndroidManifest.xml
+++ b/databinding/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         </activity>
         <activity android:name=".IncludeActivity">
         </activity>
-        <activity android:name=".CollectionsActivity" />
+        <activity android:name=".CollectionsActivity"/>
+        <activity android:name=".DataObjectsActivity">
+        </activity>
     </application>
 
 </manifest>
