--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':recyclerView', ':imageMemoryOptimization', ':imageloader', ':notifaction', ':view', ':activity', ':anr', ':databinding'
+include ':app', ':recyclerView', ':imageMemoryOptimization', ':imageloader', ':notifaction', ':view', ':activity', ':anr', ':databinding', ':BitmapDrawable'
